--- a/style.css
+++ b/style.css
@@ -17,6 +17,17 @@ body {
     grid-column: 1;
     grid-row: 1 / -1;
     border: 2px solid yellow;
+
+    display: grid;
+    grid-template-rows: 1fr 3fr 2fr;
+}
+
+.sidebar__primary {
+    grid-row: 2;
+}
+
+.sidebar__secondary {
+    grid-row: 3;
 }
 
 .header {
@@ -31,6 +42,7 @@ body {
 
 .logo__container {
     display: flex;
+    grid-row: 1;
 }
 
 ul {
