--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 .sidebar {
     grid-column: 1;
     grid-row: 1 / -1;
-    border: 2px solid yellow;
+    background-color: grey;
 }
 
 .sidebar__container {
@@ -46,7 +46,7 @@ li {
 .header {
     grid-column: 2 / -1;
     grid-row: 1;
-    border: 2px solid rebeccapurple;
+    border: 4px solid blue;
 }
 
 .header__container {
@@ -59,24 +59,47 @@ li {
 .searchbar {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    background-color: peachpuff;
 }
 
 .profile__nav {
     grid-column: 2 / 3;
+    background-color: pink;
 }
 
 .user__info {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
+    background-color: limegreen;
 }
 
 .buttons {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
+    background-color: lightblue;
 }
 
 .main {
-    border: 2px solid turquoise;
+    border: 4px solid purple;
+}
+
+.main__container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 100%;
+}
+
+.project__container {
+    grid-column: 1;
+    grid-row: 1 / -1;
+    background-color: wheat;
+}
+
+.announcement__container {
+    grid-column: 2;
+    grid-row: 1;
+    background-color: paleturquoise;
 }
 
 .logo__container {
