--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
 .sidebar {
     grid-column: 1;
     grid-row: 1 / -1;
-    background-color: grey;
+    background-color: #e2e8f0;
+    color: #1e293b;
 }
 
 .sidebar__container {
@@ -28,10 +29,21 @@ body {
 
 li {
     padding: .35rem 0;
+    margin: 1rem;
 }
 
 .sidebar__primary {
     grid-row: 2;
+}
+
+svg{
+    width: 1.5rem;
+    margin: 0 4px;
+}
+
+li {
+    display: flex;
+    align-items: center;
 }
 
 .sidebar__secondary {
@@ -46,7 +58,8 @@ li {
 .header {
     grid-column: 2 / -1;
     grid-row: 1;
-    border: 4px solid blue;
+    background-color: #f1f5f9;
+    color: #0f172a;
 }
 
 .header__container {
@@ -59,28 +72,25 @@ li {
 .searchbar {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    background-color: peachpuff;
 }
 
 .profile__nav {
     grid-column: 2 / 3;
-    background-color: pink;
 }
 
 .user__info {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    background-color: limegreen;
 }
 
 .buttons {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    background-color: lightblue;
 }
 
 .main {
-    border: 4px solid purple;
+    background-color: #f8fafc;
+    color: #020617;
 }
 
 .main__container {
@@ -93,13 +103,11 @@ li {
 .project__container {
     grid-column: 1;
     grid-row: 1 / -1;
-    background-color: wheat;
 }
 
 .announcement__container {
     grid-column: 2;
     grid-row: 1;
-    background-color: paleturquoise;
 }
 
 .logo__container {
