--- a/style.css
+++ b/style.css
@@ -26,19 +26,23 @@ body {
     grid-template-rows: repeat(auto-fit, 1fr);
     padding: 0 2rem;
 }
+.logo__container {
+    margin-top: 1rem;
+    margin-bottom: 4rem;
+    display: flex;
+    align-items: center;
+}
 
 li {
     padding: .35rem 0;
-    margin: 1rem;
+    margin: 1rem 0;
+    display: flex;
+    align-items: center;
 }
 
 .sidebar__primary {
     grid-row: 2;
-}
-
-li {
-    display: flex;
-    align-items: center;
+    margin-bottom: 3rem;
 }
 
 a {
@@ -56,6 +60,13 @@ svg{
     margin: 0 4px;
 }
 
+.logo{
+    width: 2rem;
+}
+
+.logo__name a:hover {
+    color: inherit;
+}
 .sidebar__secondary {
     grid-row: 3;
 }
@@ -82,6 +93,20 @@ svg{
 .searchbar {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-left: 5rem;
+}
+
+input {
+    border-radius: 100px;
+    border: none;
+    background-color: #cbd5e1;
+    height: 40%;
+    min-width: 80%;
+    font-size: 1.2rem;
+    padding: 0 10px;
 }
 
 .profile__nav {
